[package]
name = "digi_5_school"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
repository = "https://github.com/Tanja-4732/digi_5_school"
license = "AGPL-3.0-or-later"
# keywords = []
# categories = []
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
