[package]
name = "d5s"
version = "0.0.0"
edition = "2021"
authors = ["Tanja <rust@tanja.pw>"]
repository = "https://github.com/Tanja-4732/digi_5_school"
license = "AGPL-3.0-or-later"
# keywords = []
# categories = []
include = ["/src", "/Cargo.toml", "/README.md", "/LICENSE.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = { version = "0.4.31", features = ["serde"] }
clap = { version = "4.4.6", features = ["derive", "wrap_help", "unicode", "string"] }
reqwest = { version = "0.11.22", features = ["cookie_crate", "cookie_store", "cookies", "json", "serde_json", "tokio-rustls"] }
reqwest_cookie_store = "0.6.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["full"] }
